Header was too transparent and hard to see text on. Favicon aspect ration fixed.

--- a/Home/index.css
+++ b/Home/index.css
@@ -47,7 +47,7 @@ header {
 	width: 100%;
 	position: fixed;
 	top: 0;
-	background-color: #7474744d;
+	background-color: #cfcfcf9a;
 	backdrop-filter: blur(20px);
 }
 
